--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <ul id="finalResults"></ul>
 </div>
 </main>
-<script src="js/app.js"></script>
+<canvas id="myChart"></canvas>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
